Bind9 LDAP SDB Change Log

bind9-ldap 1.1.1 TO BE ANNOUNCED
	Bug fixes
	  - Fix zone2ldap.c:main() to work with later Bind9.
	  - Update paths in the Makefile (reflect the fact that
	    the LDAP sdb is in 'contrib/sdb/ldap' and not 'contrib/sdb').
	  - Fix object class generation (newer OpenLDAP is very picky
	    about this) in zone2ldap.

	Additions/Misc changes
	  - Include zone2ldap command
	  - Include zone2ldif command
	  - Include ldap2zone command
	  - Try connecting three times (with five seconds sleep()
	    between each attempt) to the LDAP server before failing.
	  - More verbose error if failing to connect/bind to the
	    LDAP server (using the ldap_perror() function).
	  - First param to contrib/sdb/ldap/ldapdb.c:ldapdb_bind() is
	    now the zone name. Used only in debug output (makes it
	    easier to figure out which zone that it wasn't possible
	    to bind for).
	  - Add some debugging to easier see connects/binds etc.
	    + Change existing debugging to use ISC_LOG_DEBUG(2) instead
	      of 1...
	    + Include LDAP URI in output of failed ldap_initialize().
	  - Add SASL support to zone2ldap and ldap2zone (if compiled with
	    the -DSECUREBIND_SASL flag).
	    + Update Makefile and zone2ldap man page with additional
	      options.
	  - Add offline support to zone2ldap so that we don't need to
	    link with LDAP libs etc. Accomplished by using the -DOFFLINE
	    flag and the -L flag to binary.
	  - Added StartTLS (-ZZ flag) and LDAP URI support (-L flag) to
	    zone2ldap.
	  - Added the possibility to add OpenLDAPaci attribute(s) to
	    objects created by zone2ldap.
	  - Misc code changes in ldap2zone.c by Adam Tkac @ RedHat.
	    + Shutup compiler warnings
	    + Fix Compilation on 64bit systems - Implicitly declare
	      malloc()-s caused segfaults.
	  - Added dNSView attribute to schema, as suggested by Alex Bramley.
